--- a/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Lists_Medical_Insurance.ipynb
+++ b/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Lists_Medical_Insurance.ipynb
@@ -45,7 +45,9 @@
     "   These variables are used in the following formula to estimate an individual's insurance cost (in USD):\n",
     "   \n",
     "   $$\n",
-    "   insurance\\_cost = 250*age - 128*sex + 370*bmi + 425*num\\_of\\_children + 24000*smoker - 12500\n",
+    "   insurance\\_cost = 250*age - 128*sex \\\\\n",
+    "   + 370*bmi + 425*num\\_of\\_children \\\\\n",
+    "   + 24000*smoker - 12500\n",
     "   $$\n",
     "   \n",
     "   Observe below the code the estimated insurance costs for three individuals - Maria, Rohan, and Valentina."
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a6e98fae",
    "metadata": {},
    "outputs": [
@@ -99,11 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6e4218d8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "names = [\"Maria\", \"Rohan\", \"Valentina\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,11 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "93fc21ce",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "insurance_costs = [4150.0, 5320.0, 35210.0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,11 +152,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "42f299ef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<zip object at 0x0000019B20824C00>\n"
+     ]
+    }
+   ],
+   "source": [
+    "insurance_data = zip(names, insurance_costs)\n",
+    "print(insurance_data)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -174,11 +191,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ef0311a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Maria', 4150.0), ('Rohan', 5320.0), ('Valentina', 35210.0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "insurance_data = list(zip(names, insurance_costs))\n",
+    "print(insurance_data)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,11 +228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "02025200",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "estimated_insurance_data = []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,11 +248,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f0177c39",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "estimated_insurance_data.append((\"Maria\", maria_insurance_cost))\n",
+    "estimated_insurance_data.append((\"Rohan\", rohan_insurance_cost))\n",
+    "estimated_insurance_data.append((\"Valentina\", valentina_insurance_cost))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,11 +270,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d7066b0c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Maria', 4222.0), ('Rohan', 5442.0), ('Valentina', 36368.0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(estimated_insurance_data)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,7 +299,7 @@
    "id": "c41d4c11",
    "metadata": {},
    "source": [
-    "9. In the output, you should see two lists. The first one represents the **actual** insurance cost data and the second one represents the **estimated** insurance cost data.\n",
+    "9. We now have two lists. The first one represents the **actual** insurance cost data and the second one represents the **estimated** insurance cost data.\n",
     "\n",
     "   However, it's difficult to know this just by looking at the output. As a data scientist, you want to make sure that your data is clean and easy to understand.\n",
     "   \n",
@@ -272,7 +316,9 @@
    "id": "0da6c2e5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(f\"Here is the actual insurance cost data: {}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -365,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
