--- a/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Lists_Medical_Insurance.ipynb
+++ b/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Lists_Medical_Insurance.ipynb
@@ -312,12 +312,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0da6c2e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the actual insurance cost data: [('Maria', 4150.0), ('Rohan', 5320.0), ('Valentina', 35210.0)]\n"
+     ]
+    }
+   ],
    "source": [
-    "print(f\"Here is the actual insurance cost data: {}\")"
+    "print(f\"Here is the actual insurance cost data: {insurance_data}\")"
    ]
   },
   {
@@ -334,11 +342,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "dc701f7b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the estimated insurance cost data: [('Maria', 4222.0), ('Rohan', 5442.0), ('Valentina', 36368.0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Here is the estimated insurance cost data: {estimated_insurance_data}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -355,12 +373,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bce2ea2",
+   "cell_type": "markdown",
+   "id": "697542bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The estimates seems to overestimate the costs. If we compare each one in the format of *real* vs *estimate* the real is always lower:\n",
+    "\n",
+    "- 4150 vs 4222\n",
+    "- 5320 vs 5442\n",
+    "- 35210 vs 36368"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -375,11 +397,7 @@
    "id": "761c4808",
    "metadata": {},
    "source": [
-    "12. Congratulations! In this project, you used Python lists to store **estimated** insurance cost data and then compare that data to **actual** insurance cost data.\n",
-    "\n",
-    "    As you've seen, lists are data structures in Python that can contain multiple pieces of data in a single object. As a data scientist, you'll find yourself working with this data structure quite often. You now have a solid foundation to move forward in your data science journey!\n",
-    "    \n",
-    "    If you'd like additional practice on lists, here are some ways you might extend this project:\n",
+    "12. Here are some ways you might extend this project:\n",
     "    - Calculate the difference between the actual insurance cost data and the estimated insurance cost data for each individual, and store the results in a list called `insurance_cost_dif`.\n",
     "    - Estimate the insurance cost for a new individual, Akira, who is a 19-year-old male non-smoker with no children and a BMI of 27.1. Make sure to append his name to `names` and his actual insurance cost, `2930.0`, to `insurance_costs`.\n",
     "    \n",
@@ -388,11 +406,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8f50b08c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Akira's Estimated Insurance Cost: 2149.0 dollars.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adding the new user first\n",
+    "akira_insurance_cost = estimate_insurance_cost(name=\"Akira\", age=19, sex=1, bmi=27.1, num_of_children=0, smoker=0)\n",
+    "insurance_data.append((\"Akira\", 2930.0))\n",
+    "estimated_insurance_data.append((\"Akira\", akira_insurance_cost))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8ad0f90a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Maria', -72.0), ('Rohan', -122.0), ('Valentina', -1158.0), ('Akira', 781.0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Insurance data differences\n",
+    "# Not using any loops, or list comprehention methods since the project is before it gets covered\n",
+    "maria_dif = insurance_data[0][1] - estimated_insurance_data[0][1]\n",
+    "rohan_dif = insurance_data[1][1] - estimated_insurance_data[1][1]\n",
+    "valentina_dif = insurance_data[2][1] - estimated_insurance_data[2][1]\n",
+    "akira_dif = insurance_data[3][1] - estimated_insurance_data[3][1]\n",
+    "insurance_cost_dif = [(\"Maria\", maria_dif), (\"Rohan\", rohan_dif), (\"Valentina\", valentina_dif), (\"Akira\", akira_dif)]\n",
+    "print(insurance_cost_dif)"
+   ]
   }
  ],
  "metadata": {
