--- a/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Working_with_Python_Lists_Medical_Insurance.ipynb
+++ b/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Working_with_Python_Lists_Medical_Insurance.ipynb
@@ -56,7 +56,9 @@
    "outputs": [],
    "source": [
     "names = [\"Mohamed\", \"Sara\", \"Xia\", \"Paul\", \"Valentina\", \"Jide\", \"Aaron\", \"Emily\", \"Nikita\", \"Paul\"]\n",
-    "insurance_costs = [13262.0, 4816.0, 6839.0, 5054.0, 14724.0, 5360.0, 7640.0, 6072.0, 2750.0, 12064.0]"
+    "insurance_costs = [13262.0, 4816.0, 6839.0, 5054.0, 14724.0, 5360.0, 7640.0, 6072.0, 2750.0, 12064.0]\n",
+    "names.append(\"Priscilla\")\n",
+    "insurance_costs.append(8320.0)"
    ]
   },
   {
@@ -77,11 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e63ae8e7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "medical_records = list(zip(insurance_costs, names))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,11 +97,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3f46631e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(13262.0, 'Mohamed'), (4816.0, 'Sara'), (6839.0, 'Xia'), (5054.0, 'Paul'), (14724.0, 'Valentina'), (5360.0, 'Jide'), (7640.0, 'Aaron'), (6072.0, 'Emily'), (2750.0, 'Nikita'), (12064.0, 'Paul'), (8320.0, 'Priscilla')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(medical_records)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,11 +125,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b1558949",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num_medical_records = len(medical_records)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,11 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "fbdc5495",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 11 medical records.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"There are {num_medical_records} medical records.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,11 +181,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "53b88931",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "first_medical_record = medical_records[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,11 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "762a3af7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the first medical record: (13262.0, 'Mohamed')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Here is the first medical record: {first_medical_record}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -205,11 +243,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8e23efbb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are the medical records sorted by insurance cost: [(2750.0, 'Nikita'), (4816.0, 'Sara'), (5054.0, 'Paul'), (5360.0, 'Jide'), (6072.0, 'Emily'), (6839.0, 'Xia'), (7640.0, 'Aaron'), (8320.0, 'Priscilla'), (12064.0, 'Paul'), (13262.0, 'Mohamed'), (14724.0, 'Valentina')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "medical_records.sort()\n",
+    "print(f\"Here are the medical records sorted by insurance cost: {medical_records}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,11 +280,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4155c88f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cheapest_three = medical_records[:3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -251,11 +302,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1b9284dc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are the three cheapest insurance costs in our medical records: [(2750.0, 'Nikita'), (4816.0, 'Sara'), (5054.0, 'Paul')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Here are the three cheapest insurance costs in our medical records: {cheapest_three}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -269,11 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "017e1171",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priciest_three = medical_records[-3:]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -289,11 +352,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0ced2fb2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are the three most expensive insurance costs in our medical records: [(12064.0, 'Paul'), (13262.0, 'Mohamed'), (14724.0, 'Valentina')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Here are the three most expensive insurance costs in our medical records: {priciest_three}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -321,11 +394,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1527cbb8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 2 individuals with the name Paul in our medical records.\n"
+     ]
+    }
+   ],
+   "source": [
+    "occurrences_paul = names.count(\"Paul\")\n",
+    "print(f\"There are {occurrences_paul} individuals with the name Paul in our medical records.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -347,19 +431,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "149284a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "These are the medical records sorted by name: [('Aaron', 7640.0), ('Emily', 6072.0), ('Jide', 5360.0), ('Mohamed', 13262.0), ('Nikita', 2750.0), ('Paul', 5054.0), ('Paul', 12064.0), ('Priscilla', 8320.0), ('Sara', 4816.0), ('Valentina', 14724.0), ('Xia', 6839.0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_medical_records = list(zip(names, insurance_costs))\n",
+    "new_medical_records.sort()\n",
+    "print(f\"These are the medical records sorted by name: {new_medical_records}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "575e405c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "These are the middle five medical records: [(5360.0, 'Jide'), (6072.0, 'Emily'), (6839.0, 'Xia'), (7640.0, 'Aaron'), (8320.0, 'Priscilla')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "middle_five_records = medical_records[3:8]\n",
+    "print(f\"These are the middle five medical records: {middle_five_records}\")"
+   ]
   }
  ],
  "metadata": {
@@ -378,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
