--- a/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Loops_Medical_Insurance.ipynb
+++ b/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Loops_Medical_Insurance.ipynb
@@ -51,14 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "942629ef",
    "metadata": {},
    "outputs": [],
    "source": [
     "names = [\"Judith\", \"Abel\", \"Tyson\", \"Martha\", \"Beverley\", \"David\", \"Anabel\"]\n",
     "estimated_insurance_costs = [1000.0, 2000.0, 3000.0, 4000.0, 5000.0, 6000.0, 7000.0]\n",
-    "actual_insurance_costs = [1100.0, 2200.0, 3300.0, 4400.0, 5500.0, 6600.0, 7700.0]\n"
+    "actual_insurance_costs = [1100.0, 2200.0, 3300.0, 4400.0, 5500.0, 6600.0, 7700.0]\n",
+    "\n",
+    "total_cost = 0"
    ]
   },
   {
@@ -71,11 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7572afff",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for cost in actual_insurance_costs:\n",
+    "    total_cost += cost"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,11 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bb393759",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "average_cost = total_cost / len(actual_insurance_costs)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,11 +114,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cb2abd2f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Insurance Cost: 4400.0 dollars.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Average Insurance Cost: {average_cost} dollars.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,11 +152,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "36569227",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (188092559.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[5], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    for i in range(0, len(names)):\u001b[0m\n\u001b[1;37m                                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, len(names)):"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,20 +185,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7f9065e5",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4f76f415",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The insurance cost for Judith is 1100.0 dollars.\n",
+      "The insurance cost for Abel is 2200.0 dollars.\n",
+      "The insurance cost for Tyson is 3300.0 dollars.\n",
+      "The insurance cost for Martha is 4400.0 dollars.\n",
+      "The insurance cost for Beverley is 5500.0 dollars.\n",
+      "The insurance cost for David is 6600.0 dollars.\n",
+      "The insurance cost for Anabel is 7700.0 dollars.\n"
+     ]
+    }
+   ],
    "source": [
-    "7. Observe the result above.\n",
-    "\n",
-    "   You should see the insurance costs for each of the seven individuals in `names`. The `for` loop iterated through the entire list and printed out the insurance cost for each individual."
+    "for i in range(0, len(names)):\n",
+    "    name = names[i]\n",
+    "    insurance_cost = actual_insurance_costs[i]\n",
+    "    print(f\"The insurance cost for {name} is {insurance_cost} dollars.\")"
    ]
   },
   {
@@ -186,7 +223,7 @@
    "id": "a6570594",
    "metadata": {},
    "source": [
-    "8. Inside of the `for` loop, use `if`, `elif`, `else` statements after the `print` statement to check whether the insurance cost is above, below, or equal to the average. Print out messages for each case:\n",
+    "7. Inside of the `for` loop, use `if`, `elif`, `else` statements after the `print` statement to check whether the insurance cost is above, below, or equal to the average. Print out messages for each case:\n",
     "   - When `insurance_cost` is higher than the average, print out the following:\n",
     "   ```\n",
     "   The insurance cost for <name> is above average.\n",
@@ -203,20 +240,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "93ffface",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e62cd4bb",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The insurance cost for Judith is 1100.0 dollars.\n",
+      "The insurance cost for Judith is below average.\n",
+      "The insurance cost for Abel is 2200.0 dollars.\n",
+      "The insurance cost for Abel is below average.\n",
+      "The insurance cost for Tyson is 3300.0 dollars.\n",
+      "The insurance cost for Tyson is below average.\n",
+      "The insurance cost for Martha is 4400.0 dollars.\n",
+      "The insurance cost for Martha is equal to the average.\n",
+      "The insurance cost for Beverley is 5500.0 dollars.\n",
+      "The insurance cost for Beverley is above average.\n",
+      "The insurance cost for David is 6600.0 dollars.\n",
+      "The insurance cost for David is above average.\n",
+      "The insurance cost for Anabel is 7700.0 dollars.\n",
+      "The insurance cost for Anabel is above average.\n"
+     ]
+    }
+   ],
    "source": [
-    "9. Observe the output above.\n",
-    "\n",
-    "   You should see messages indicating the insurance cost for each of the seven individuals and where their insurance cost stands relative to the average."
+    "for i in range(0, len(names)):\n",
+    "    name = names[i]\n",
+    "    insurance_cost = actual_insurance_costs[i]\n",
+    "    print(f\"The insurance cost for {name} is {insurance_cost} dollars.\")\n",
+    "    if insurance_cost > average_cost:\n",
+    "        print(f\"The insurance cost for {name} is above average.\")\n",
+    "    elif insurance_cost < average_cost:\n",
+    "        print(f\"The insurance cost for {name} is below average.\")\n",
+    "    else:\n",
+    "        print(f\"The insurance cost for {name} is equal to the average.\")"
    ]
   },
   {
@@ -232,36 +291,50 @@
    "id": "dde1e68d",
    "metadata": {},
    "source": [
-    "10. If you look closely at `actual_insurance_costs` and `estimated_insurance_costs`, you will notice that each of the actual insurance costs is 10% higher than the estimated insurance costs.\n",
+    "8. If you look closely at `actual_insurance_costs` and `estimated_insurance_costs`, you will notice that each of the actual insurance costs is 10% higher than the estimated insurance costs.\n",
     " \n",
     "    Using a list comprehension, create a new list called `updated_estimated_costs`, which has each element in `estimated_insurance_costs` multiplied by `11/10`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b5602da4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "updated_estimated_costs = [estimate * 11/10 for estimate in estimated_insurance_costs]"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "eeb071e3",
    "metadata": {},
    "source": [
-    "11. Print `updated_estimated_costs`.\n",
+    "9. Print `updated_estimated_costs`.\n",
     "\n",
     "    You should see that the list now looks the same as `actual_insurance_costs`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6dc117e9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the updated estimated costs: [1100.0, 2200.0, 3300.0, 4400.0, 5500.0, 6600.0, 7700.0]\n",
+      "This is the actual costs: [1100.0, 2200.0, 3300.0, 4400.0, 5500.0, 6600.0, 7700.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"This is the updated estimated costs: {updated_estimated_costs}\")\n",
+    "print(f\"This is the actual costs: {actual_insurance_costs}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -276,26 +349,68 @@
    "id": "bc6c0a65",
    "metadata": {},
    "source": [
-    "12. Here are some extra questions:\n",
+    "10. Here are some extra questions:\n",
     "    - Convert the first `for` loop in the code to a `while` loop.\n",
     "    - Modify the second `for` loop so that it also calculates how far above or below the average estimated insurance cost is."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7aac3b39",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "84700.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "index = 0\n",
+    "while index < len(actual_insurance_costs):\n",
+    "    total_cost += cost\n",
+    "    index += 1\n",
+    "print(total_cost)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a2d0b5cf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The insurance cost for Judith is 1100.0 dollars.\n",
+      "Judith paid -3300.0 of a difference compared to the average insurance cost\n",
+      "The insurance cost for Abel is 2200.0 dollars.\n",
+      "Abel paid -2200.0 of a difference compared to the average insurance cost\n",
+      "The insurance cost for Tyson is 3300.0 dollars.\n",
+      "Tyson paid -1100.0 of a difference compared to the average insurance cost\n",
+      "The insurance cost for Martha is 4400.0 dollars.\n",
+      "Martha paid 0.0 of a difference compared to the average insurance cost\n",
+      "The insurance cost for Beverley is 5500.0 dollars.\n",
+      "Beverley paid 1100.0 of a difference compared to the average insurance cost\n",
+      "The insurance cost for David is 6600.0 dollars.\n",
+      "David paid 2200.0 of a difference compared to the average insurance cost\n",
+      "The insurance cost for Anabel is 7700.0 dollars.\n",
+      "Anabel paid 3300.0 of a difference compared to the average insurance cost\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, len(names)):\n",
+    "    name = names[i]\n",
+    "    insurance_cost = actual_insurance_costs[i]\n",
+    "    print(f\"The insurance cost for {name} is {insurance_cost} dollars.\")\n",
+    "    costs_dif = insurance_cost - average_cost\n",
+    "    print(f\"{name} paid {costs_dif} of a difference compared to the average insurance cost\")"
+   ]
   }
  ],
  "metadata": {
