--- a/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Strings_Medical_Insurance.ipynb
+++ b/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Strings_Medical_Insurance.ipynb
@@ -48,10 +48,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "98d79856",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marina Allison   ,27   ,   31.1 , \n",
+      "#7010.0   ;Markus Valdez   ,   30, \n",
+      "22.4,   #4050.0 ;Connie Ballard ,43 \n",
+      ",   25.3 , #12060.0 ;Darnell Weber   \n",
+      ",   35   , 20.6   , #7500.0;\n",
+      "Sylvie Charles   ,22, 22.1 \n",
+      ",#3022.0   ;   Vinay Padilla,24,   \n",
+      "26.9 ,#4620.0 ;Meredith Santiago, 51   , \n",
+      "29.3 ,#16330.0;   Andre Mccarty, \n",
+      "19,22.7 , #2900.0 ; \n",
+      "Lorena Hodson ,65, 33.1 , #19370.0; \n",
+      "Isaac Vu ,34, 24.8,   #7045.0\n"
+     ]
+    }
+   ],
    "source": [
     "medical_data = \\\n",
     "\"\"\"Marina Allison   ,27   ,   31.1 , \n",
@@ -65,7 +84,9 @@
     "29.3 ,#16330.0;   Andre Mccarty, \n",
     "19,22.7 , #2900.0 ; \n",
     "Lorena Hodson ,65, 33.1 , #19370.0; \n",
-    "Isaac Vu ,34, 24.8,   #7045.0\"\"\"\n"
+    "Isaac Vu ,34, 24.8,   #7045.0\"\"\"\n",
+    "\n",
+    "print(medical_data)\n"
    ]
   },
   {
@@ -82,11 +103,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0fafcc50",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marina Allison   ,27   ,   31.1 , \n",
+      "$7010.0   ;Markus Valdez   ,   30, \n",
+      "22.4,   $4050.0 ;Connie Ballard ,43 \n",
+      ",   25.3 , $12060.0 ;Darnell Weber   \n",
+      ",   35   , 20.6   , $7500.0;\n",
+      "Sylvie Charles   ,22, 22.1 \n",
+      ",$3022.0   ;   Vinay Padilla,24,   \n",
+      "26.9 ,$4620.0 ;Meredith Santiago, 51   , \n",
+      "29.3 ,$16330.0;   Andre Mccarty, \n",
+      "19,22.7 , $2900.0 ; \n",
+      "Lorena Hodson ,65, 33.1 , $19370.0; \n",
+      "Isaac Vu ,34, 24.8,   $7045.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "updated_medical_data = medical_data.replace(\"#\", \"$\")\n",
+    "print(updated_medical_data)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,11 +143,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9da8e807",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num_records = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,11 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7d5aaabf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for character in updated_medical_data:\n",
+    "    if character == \"$\":\n",
+    "        num_records += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,11 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6638542f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 10 medical records in the data.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"There are {num_records} medical records in the data.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -164,11 +223,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "76cae5e8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Marina Allison   ,27   ,   31.1 , \\n$7010.0   ', 'Markus Valdez   ,   30, \\n22.4,   $4050.0 ', 'Connie Ballard ,43 \\n,   25.3 , $12060.0 ', 'Darnell Weber   \\n,   35   , 20.6   , $7500.0', '\\nSylvie Charles   ,22, 22.1 \\n,$3022.0   ', '   Vinay Padilla,24,   \\n26.9 ,$4620.0 ', 'Meredith Santiago, 51   , \\n29.3 ,$16330.0', '   Andre Mccarty, \\n19,22.7 , $2900.0 ', ' \\nLorena Hodson ,65, 33.1 , $19370.0', ' \\nIsaac Vu ,34, 24.8,   $7045.0']\n"
+     ]
+    }
+   ],
+   "source": [
+    "medical_data_split = updated_medical_data.split(\";\")\n",
+    "print(medical_data_split)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,11 +252,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "434ed907",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "medical_records = []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,11 +272,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d57c33b1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Marina Allison   ', '27   ', '   31.1 ', ' \\n$7010.0   '], ['Markus Valdez   ', '   30', ' \\n22.4', '   $4050.0 '], ['Connie Ballard ', '43 \\n', '   25.3 ', ' $12060.0 '], ['Darnell Weber   \\n', '   35   ', ' 20.6   ', ' $7500.0'], ['\\nSylvie Charles   ', '22', ' 22.1 \\n', '$3022.0   '], ['   Vinay Padilla', '24', '   \\n26.9 ', '$4620.0 '], ['Meredith Santiago', ' 51   ', ' \\n29.3 ', '$16330.0'], ['   Andre Mccarty', ' \\n19', '22.7 ', ' $2900.0 '], [' \\nLorena Hodson ', '65', ' 33.1 ', ' $19370.0'], [' \\nIsaac Vu ', '34', ' 24.8', '   $7045.0']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for record in medical_data_split:\n",
+    "    medical_records.append(record.split(\",\"))\n",
+    "print(medical_records)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,11 +310,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fe45e1b0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "medical_records_clean = []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -244,11 +330,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1d13c527",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for record in medical_records:\n",
+    "    record_clean = []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,11 +355,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "62c68cf6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for record in medical_records:\n",
+    "    record_clean = []\n",
+    "    for item in record:\n",
+    "        record_clean.append(item.strip())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -284,11 +378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "4ac79cd2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for record in medical_records:\n",
+    "    record_clean = []\n",
+    "    for item in record:\n",
+    "        record_clean.append(item.strip())\n",
+    "    medical_records_clean.append(record_clean)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -302,11 +402,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c8ab9356",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Marina Allison', '27', '31.1', '$7010.0'], ['Markus Valdez', '30', '22.4', '$4050.0'], ['Connie Ballard', '43', '25.3', '$12060.0'], ['Darnell Weber', '35', '20.6', '$7500.0'], ['Sylvie Charles', '22', '22.1', '$3022.0'], ['Vinay Padilla', '24', '26.9', '$4620.0'], ['Meredith Santiago', '51', '29.3', '$16330.0'], ['Andre Mccarty', '19', '22.7', '$2900.0'], ['Lorena Hodson', '65', '33.1', '$19370.0'], ['Isaac Vu', '34', '24.8', '$7045.0']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(medical_records_clean)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -334,11 +444,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "3ade320b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marina Allison\n",
+      "Markus Valdez\n",
+      "Connie Ballard\n",
+      "Darnell Weber\n",
+      "Sylvie Charles\n",
+      "Vinay Padilla\n",
+      "Meredith Santiago\n",
+      "Andre Mccarty\n",
+      "Lorena Hodson\n",
+      "Isaac Vu\n"
+     ]
+    }
+   ],
+   "source": [
+    "for record in medical_records_clean:\n",
+    "    print(record[0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -354,11 +484,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ee24f738",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MARINA ALLISON\n",
+      "MARKUS VALDEZ\n",
+      "CONNIE BALLARD\n",
+      "DARNELL WEBER\n",
+      "SYLVIE CHARLES\n",
+      "VINAY PADILLA\n",
+      "MEREDITH SANTIAGO\n",
+      "ANDRE MCCARTY\n",
+      "LORENA HODSON\n",
+      "ISAAC VU\n"
+     ]
+    }
+   ],
+   "source": [
+    "for record in medical_records_clean:\n",
+    "    print(record[0].upper())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -376,11 +526,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e77b8028",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "names, ages, bmis, insurance_costs = [], [], [], []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -396,11 +548,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "2e370347",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for record in medical_records_clean:\n",
+    "    names.append(record[0])\n",
+    "    ages.append(record[1])\n",
+    "    bmis.append(record[2])\n",
+    "    insurance_costs.append(record[3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -414,11 +572,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "72fd0613",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Marina Allison', 'Markus Valdez', 'Connie Ballard', 'Darnell Weber', 'Sylvie Charles', 'Vinay Padilla', 'Meredith Santiago', 'Andre Mccarty', 'Lorena Hodson', 'Isaac Vu']\n",
+      "['27', '30', '43', '35', '22', '24', '51', '19', '65', '34']\n",
+      "['31.1', '22.4', '25.3', '20.6', '22.1', '26.9', '29.3', '22.7', '33.1', '24.8']\n",
+      "['$7010.0', '$4050.0', '$12060.0', '$7500.0', '$3022.0', '$4620.0', '$16330.0', '$2900.0', '$19370.0', '$7045.0']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(names)\n",
+    "print(ages)\n",
+    "print(bmis)\n",
+    "print(insurance_costs)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -432,11 +606,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "303e90dd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "total_bmi = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -450,11 +626,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b174204c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for bmi in bmis:\n",
+    "    total_bmi += float(bmi)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -471,11 +650,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "fc16ab5d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average BMI: 25.83\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_bmi = round(total_bmi / len(bmis), 2)\n",
+    "print(f\"Average BMI: {average_bmi}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -502,19 +692,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "cbe47776",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average insurance cost: $8390.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_cost = 0\n",
+    "for cost in insurance_costs:\n",
+    "    total_cost += float(cost.replace(\"$\", \"\"))\n",
+    "\n",
+    "average_cost = round(total_cost / len(insurance_costs), 2)\n",
+    "print(f\"Average insurance cost: ${average_cost}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "c30eba87",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marina is 27 years old with a BMI of 31.1 and an insurance cost of $7010.0.\n",
+      "Markus is 30 years old with a BMI of 22.4 and an insurance cost of $4050.0.\n",
+      "Connie is 43 years old with a BMI of 25.3 and an insurance cost of $12060.0.\n",
+      "Darnell is 35 years old with a BMI of 20.6 and an insurance cost of $7500.0.\n",
+      "Sylvie is 22 years old with a BMI of 22.1 and an insurance cost of $3022.0.\n",
+      "Vinay is 24 years old with a BMI of 26.9 and an insurance cost of $4620.0.\n",
+      "Meredith is 51 years old with a BMI of 29.3 and an insurance cost of $16330.0.\n",
+      "Andre is 19 years old with a BMI of 22.7 and an insurance cost of $2900.0.\n",
+      "Lorena is 65 years old with a BMI of 33.1 and an insurance cost of $19370.0.\n",
+      "Isaac is 34 years old with a BMI of 24.8 and an insurance cost of $7045.0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index in range(len(names)):\n",
+    "    print(f\"{names[index].split()[0]} is {ages[index]} years old with a BMI of {bmis[index]} and an insurance cost of {insurance_costs[index]}.\")"
+   ]
   }
  ],
  "metadata": {
@@ -533,7 +758,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
