--- a/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Dictionaries_Medical_Insurance.ipynb
+++ b/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Dictionaries_Medical_Insurance.ipynb
@@ -46,11 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e6df17a2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "medical_costs = {}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,11 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dec12f6a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "medical_costs[\"Marina\"] = 6607.0\n",
+    "medical_costs[\"Vinay\"] = 3225.0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,11 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "015d4658",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "medical_costs.update({\"Connie\": 8886.0, \"Isaac\": 16444.0, \"Valentina\": 6420.0})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,11 +106,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8b58435b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Marina': 6607.0, 'Vinay': 3225.0, 'Connie': 8886.0, 'Isaac': 16444.0, 'Valentina': 6420.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(medical_costs)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,11 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8b484f83",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Marina': 6607.0, 'Vinay': 3325.0, 'Connie': 8886.0, 'Isaac': 16444.0, 'Valentina': 6420.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "medical_costs[\"Vinay\"] = 3325.0\n",
+    "print(medical_costs)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,11 +163,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ef636a71",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "total_cost = 0\n",
+    "for cost in medical_costs.values():\n",
+    "    total_cost += cost"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,11 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a6d83515",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Insurance Cost: 8336.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_cost = total_cost / len(medical_costs)\n",
+    "print(f\"Average Insurance Cost: {average_cost}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,11 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "88db2876",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "names = [\"Marina\", \"Vinay\", \"Connie\", \"Isaac\", \"Valentina\"]\n",
+    "ages = [27, 24, 43, 35, 52]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,11 +253,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "eddb66ba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "zipped_ages = zip(names, ages)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,11 +273,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "dc760b49",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Marina': 27, 'Vinay': 24, 'Connie': 43, 'Isaac': 35, 'Valentina': 52}\n"
+     ]
+    }
+   ],
+   "source": [
+    "names_to_ages = {name: age for name, age in zipped_ages}\n",
+    "print(names_to_ages)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -247,11 +306,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "a7c9e288",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marina's age is 27\n"
+     ]
+    }
+   ],
+   "source": [
+    "marina_age = names_to_ages.get(\"Marina\", None)\n",
+    "print(f\"Marina's age is {marina_age}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,11 +343,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "768401f1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "medical_records = {}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -293,11 +365,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "5f4a0390",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "medical_records[\"Marina\"] = {\"Age\": 27, \"Sex\": \"Female\", \"BMI\": 31.1, \"Children\": 2, \"Smoker\": \"Non-smoker\", \"Insurance_cost\": 6607.0}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,11 +390,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "55de66f6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "medical_records.update({\n",
+    "    \"Vinay\": {\"Age\": 24, \"Sex\": \"Male\", \"BMI\": 26.9, \"Children\": 0, \"Smoker\": \"Non-smoker\", \"Insurance_cost\": 3225.0},\n",
+    "    \"Connie\": {\"Age\": 43, \"Sex\": \"Female\", \"BMI\": 25.3, \"Children\": 3, \"Smoker\": \"Non-smoker\", \"Insurance_cost\": 8886.0},\n",
+    "    \"Isaac\": {\"Age\": 35, \"Sex\": \"Male\", \"BMI\": 20.6, \"Children\": 4, \"Smoker\": \"Smoker\", \"Insurance_cost\": 16444.0},\n",
+    "    \"Valentina\": {\"Age\": 52, \"Sex\": \"Female\", \"BMI\": 18.7, \"Children\": 1, \"Smoker\": \"Non-smoker\", \"Insurance_cost\": 6420.0}\n",
+    "})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -332,11 +413,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "88c952f7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Marina': {'Age': 27, 'Sex': 'Female', 'BMI': 31.1, 'Children': 2, 'Smoker': 'Non-smoker', 'Insurance_cost': 6607.0}, 'Vinay': {'Age': 24, 'Sex': 'Male', 'BMI': 26.9, 'Children': 0, 'Smoker': 'Non-smoker', 'Insurance_cost': 3225.0}, 'Connie': {'Age': 43, 'Sex': 'Female', 'BMI': 25.3, 'Children': 3, 'Smoker': 'Non-smoker', 'Insurance_cost': 8886.0}, 'Isaac': {'Age': 35, 'Sex': 'Male', 'BMI': 20.6, 'Children': 4, 'Smoker': 'Smoker', 'Insurance_cost': 16444.0}, 'Valentina': {'Age': 52, 'Sex': 'Female', 'BMI': 18.7, 'Children': 1, 'Smoker': 'Non-smoker', 'Insurance_cost': 6420.0}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(medical_records)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -354,11 +445,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "2eb86872",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connie's insurance cost is 8886.0 dollars.\n"
+     ]
+    }
+   ],
+   "source": [
+    "connie_insurance = medical_records[\"Connie\"][\"Insurance_cost\"]\n",
+    "print(f\"Connie's insurance cost is {connie_insurance} dollars.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -372,11 +474,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "eeeb5b8d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Marina': {'Age': 27, 'Sex': 'Female', 'BMI': 31.1, 'Children': 2, 'Smoker': 'Non-smoker', 'Insurance_cost': 6607.0}, 'Connie': {'Age': 43, 'Sex': 'Female', 'BMI': 25.3, 'Children': 3, 'Smoker': 'Non-smoker', 'Insurance_cost': 8886.0}, 'Isaac': {'Age': 35, 'Sex': 'Male', 'BMI': 20.6, 'Children': 4, 'Smoker': 'Smoker', 'Insurance_cost': 16444.0}, 'Valentina': {'Age': 52, 'Sex': 'Female', 'BMI': 18.7, 'Children': 1, 'Smoker': 'Non-smoker', 'Insurance_cost': 6420.0}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "medical_records.pop(\"Vinay\")\n",
+    "print(medical_records)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -394,18 +507,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "39301cd2",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "087a263c",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marina, is a 27 year old Female Non-smoker with a BMI of 31.1 and insurance cost of 6607.0\n",
+      "Connie, is a 43 year old Female Non-smoker with a BMI of 25.3 and insurance cost of 8886.0\n",
+      "Isaac, is a 35 year old Male Smoker with a BMI of 20.6 and insurance cost of 16444.0\n",
+      "Valentina, is a 52 year old Female Non-smoker with a BMI of 18.7 and insurance cost of 6420.0\n"
+     ]
+    }
+   ],
    "source": [
-    "### Extra"
+    "for name, record in medical_records.items():\n",
+    "    print(f\"{name}, is a {record[\"Age\"]} year old {record[\"Sex\"]} {record[\"Smoker\"]} with a BMI of {record[\"BMI\"]} and insurance cost of {record[\"Insurance_cost\"]}\")"
    ]
   },
   {
@@ -413,26 +532,30 @@
    "id": "8e3067e6",
    "metadata": {},
    "source": [
-    "19.  Here are some extra questions:\n",
-    "    - Create a function called `update_medical_records()` that takes in the name of an individual as well as their medical data, and then updates the `medical_records` dictionary accordingly.\n",
-    "    - Create a new dictionary of your choice - feel free to get creative!"
+    "19. Create a function called `update_medical_records()` that takes in the name of an individual as well as their medical data, and then updates the `medical_records` dictionary accordingly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "ac494987",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4195bad7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Marina': {'Age': 27, 'Sex': 'Female', 'BMI': 31.1, 'Children': 2, 'Smoker': 'Non-smoker', 'Insurance_cost': 6607.0}, 'Connie': {'Age': 43, 'Sex': 'Female', 'BMI': 25.3, 'Children': 3, 'Smoker': 'Non-smoker', 'Insurance_cost': 8886.0}, 'Isaac': {'Age': 35, 'Sex': 'Male', 'BMI': 20.6, 'Children': 4, 'Smoker': 'Smoker', 'Insurance_cost': 16444.0}, 'Valentina': {'Age': 52, 'Sex': 'Female', 'BMI': 18.7, 'Children': 1, 'Smoker': 'Non-smoker', 'Insurance_cost': 6420.0}, 'Lucas': {'Age': 23, 'Sex': 'Male', 'BMI': 23.5, 'Children': 0, 'Smoker': 'Non-smoker', 'Insurance_cost': 6125.0}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def update_medical_records(name, age, sex, bmi, children, smoker, insurance_cost):\n",
+    "    medical_records[name] = {\"Age\": age, \"Sex\": sex, \"BMI\": bmi, \"Children\": children, \"Smoker\": smoker, \"Insurance_cost\": insurance_cost}\n",
+    "\n",
+    "update_medical_records(\"Lucas\", 23, \"Male\", 23.5, 0, \"Non-smoker\", 6125.0)\n",
+    "print(medical_records)"
+   ]
   }
  ],
  "metadata": {
@@ -451,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
