Future idea of code cleanup

--- a/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Full Project/us-medical-insurance-costs.ipynb
+++ b/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Full Project/us-medical-insurance-costs.ipynb
@@ -919,7 +919,9 @@
    "source": [
     "#### Future Analysis\n",
     "\n",
-    "One main thing for future analysis is actually using machine learning techniques to fully learn which variables have the most impact. We can then also get an estimate for each person's insurance cost as well if we can get a good algorithm working."
+    "One main thing for future analysis is actually using machine learning techniques to fully learn which variables have the most impact. We can then also get an estimate for each person's insurance cost as well if we can get a good algorithm working.\n",
+    "\n",
+    "I could also make a class/more functions for the analysis instead of having all of the code be in individual cells. One function in particular would be the boxplot code which was repeated a lot."
    ]
   }
  ],
