--- a/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Full Project/us-medical-insurance-costs.ipynb
+++ b/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Full Project/us-medical-insurance-costs.ipynb
@@ -855,7 +855,7 @@
     }
    ],
    "source": [
-    "# Lamda function is to round the BMI column to the nearest integer, otherwise too many jumpy lines on the plot\n",
+    "# Lambda function is to round the BMI column to the nearest integer, otherwise too many jumpy lines on the plot\n",
     "# Put into a dictionary for easy reuse of plot_with_regression function\n",
     "avg_bmi_cost = {\n",
     "    0: insurance_data.groupby(insurance_data[\"bmi\"].apply(lambda x: round(x, 0)))[\"charges\"].mean().round(2)\n",
